# Sistema_de_semaforo

./: CMakeLists.txt
inc/: main.h  semaforo.h
src/: main.c  semaforo.c
